# only-retrieve-rag

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  simple_rag.ipynb
src/app/: main.py
src/app/api/: main.py
src/app/api/controllers/: ingest_controller.py  retrieve_controller.py
src/app/api/routers/: ingest.py  retrieve.py
src/app/configs/: logging.py  settings.py
src/app/embeddings/: __init__.py
src/app/ingestion/: __init__.py  convert.py  split.py
src/app/reranker/: __init__.py
src/app/retrievers/: vector_retriever.py
src/app/schemas/: rerank_schema.py  retrieve_schema.py
src/app/vectorstores/: __init__.py
src/test/: main.py
