[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.0.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pymilvus[milvus-lite]>=2.6.6",
]
