[project]
name = "rag"
version = "0.1.0"
description = "Rag for MOS (My Oracle Support)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "flagembedding>=1.3.5",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.0.1",
    "langserve>=0.3.3",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "pydantic-settings>=2.12.0",
    "pymilvus[model]>=2.6.6",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.40.0",
]
